K8S/games-np-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: gameservice-srv
spec:
  type: NodePort
  selector:
      app: gameservice
  ports:
    - name: gameservice
      protocol: TCP
      port: 80
      targetPort: 80
